--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,15 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# Database
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/saas_db
+# PostgreSQL Database
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=change-this-secure-password
+POSTGRES_DB=saas_db
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+# Database Connection (constructed from above)
+DATABASE_URL=postgresql+asyncpg://postgres:change-this-secure-password@localhost:5432/saas_db
 DATABASE_POOL_SIZE=20
 DATABASE_MAX_OVERFLOW=10
 
@@ -78,12 +85,40 @@ LOG_LEVEL=INFO
 PYPI_CHECK_ENABLED=true
 PYPI_CHECK_INTERVAL_HOURS=24
 
-# File Storage
-FILE_STORAGE_PROVIDER=local
+# MinIO / S3 Object Storage
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=change-this-secure-password
+MINIO_HOST=localhost
+MINIO_API_PORT=9000
+MINIO_CONSOLE_PORT=9001
+
+# File Storage (S3-compatible)
+FILE_STORAGE_PROVIDER=s3
 LOCAL_UPLOAD_DIR=uploads
 MAX_FILE_SIZE_MB=50
-AWS_S3_BUCKET=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET=saas-uploads
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=change-this-secure-password
 AWS_REGION=us-east-1
-AWS_ENDPOINT_URL=
+AWS_ENDPOINT_URL=http://localhost:9000
+
+# File Upload Restrictions
+# ALLOWED_FILE_TYPES: Controls which file types can be uploaded
+#   - Leave empty (default): Use built-in allow list (images, documents, text files)
+#   - Set to "*": Allow ALL file types (except blocked ones)
+#   - Comma-separated MIME types: Custom allow list (e.g., "image/jpeg,image/png,video/mp4")
+ALLOWED_FILE_TYPES=
+
+# Common MIME types for reference:
+# Images: image/jpeg,image/png,image/gif,image/webp,image/svg+xml
+# Documents: application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document
+# Spreadsheets: application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+# Text: text/plain,text/csv,text/markdown,application/json,text/html
+# Video: video/mp4,video/mpeg,video/quicktime,video/x-msvideo,video/webm
+# Audio: audio/mpeg,audio/wav,audio/ogg,audio/aac,audio/webm
+# Archives: application/zip,application/x-rar-compressed,application/x-7z-compressed,application/x-tar
+
+# BLOCKED_FILE_TYPES: Security block list (always enforced regardless of ALLOWED_FILE_TYPES)
+#   - Executables and potentially dangerous files are blocked by default
+#   - Add more MIME types if needed (comma-separated)
+BLOCKED_FILE_TYPES=application/x-executable,application/x-dosexec,application/x-msdos-program
