--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: postgres:16-alpine
     container_name: saas_postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: saas_db
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-saas_db}
     ports:
       - "5432:5432"
     volumes:
@@ -56,11 +56,11 @@ services:
     image: minio/minio:latest
     container_name: saas_minio
     ports:
-      - "9000:9000"      # API
-      - "9001:9001"      # Console
+      - "${MINIO_API_PORT:-9000}:9000"      # API
+      - "${MINIO_CONSOLE_PORT:-9001}:9001"      # Console
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
@@ -81,9 +81,9 @@ services:
         condition: service_healthy
     entrypoint: >
       /bin/sh -c "
-      mc alias set myminio http://minio:9000 minioadmin minioadmin;
-      mc mb myminio/saas-uploads --ignore-existing;
-      mc anonymous set download myminio/saas-uploads;
+      mc alias set myminio http://minio:9000 ${MINIO_ROOT_USER:-minioadmin} ${MINIO_ROOT_PASSWORD:-minioadmin};
+      mc mb myminio/${AWS_S3_BUCKET:-saas-uploads} --ignore-existing;
+      mc anonymous set download myminio/${AWS_S3_BUCKET:-saas-uploads};
       exit 0;
       "
     networks:
@@ -97,46 +97,46 @@ services:
     container_name: saas_api
     environment:
       # Application
-      - APP_NAME=SaaS Backend Framework
-      - APP_ENV=development
-      - DEBUG=true
-      - API_V1_PREFIX=/api/v1
-      - SECRET_KEY=dev-secret-key-change-in-production-min-32-characters-long
+      - APP_NAME=${APP_NAME:-SaaS Backend Framework}
+      - APP_ENV=${APP_ENV:-development}
+      - DEBUG=${DEBUG:-true}
+      - API_V1_PREFIX=${API_V1_PREFIX:-/api/v1}
+      - SECRET_KEY=${SECRET_KEY}
 
       # Database
-      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/saas_db
-      - DATABASE_POOL_SIZE=20
-      - DATABASE_MAX_OVERFLOW=10
+      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-saas_db}
+      - DATABASE_POOL_SIZE=${DATABASE_POOL_SIZE:-20}
+      - DATABASE_MAX_OVERFLOW=${DATABASE_MAX_OVERFLOW:-10}
 
       # Redis
-      - REDIS_URL=redis://redis:6379/0
-      - REDIS_CACHE_DB=1
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - REDIS_CACHE_DB=${REDIS_CACHE_DB:-1}
 
       # Celery
-      - CELERY_BROKER_URL=redis://redis:6379/2
-      - CELERY_RESULT_BACKEND=redis://redis:6379/3
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://redis:6379/2}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND:-redis://redis:6379/3}
 
       # File Storage - MinIO (S3-compatible)
-      - FILE_STORAGE_PROVIDER=s3
-      - MAX_FILE_SIZE_MB=50
-      - AWS_S3_BUCKET=saas-uploads
-      - AWS_ACCESS_KEY_ID=minioadmin
-      - AWS_SECRET_ACCESS_KEY=minioadmin
-      - AWS_REGION=us-east-1
+      - FILE_STORAGE_PROVIDER=${FILE_STORAGE_PROVIDER:-s3}
+      - MAX_FILE_SIZE_MB=${MAX_FILE_SIZE_MB:-50}
+      - AWS_S3_BUCKET=${AWS_S3_BUCKET:-saas-uploads}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-minioadmin}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-minioadmin}
+      - AWS_REGION=${AWS_REGION:-us-east-1}
       - AWS_ENDPOINT_URL=http://minio:9000
 
       # Security
-      - BCRYPT_ROUNDS=12
-      - PASSWORD_MIN_LENGTH=8
-      - ACCESS_TOKEN_EXPIRE_MINUTES=30
-      - REFRESH_TOKEN_EXPIRE_DAYS=7
+      - BCRYPT_ROUNDS=${BCRYPT_ROUNDS:-12}
+      - PASSWORD_MIN_LENGTH=${PASSWORD_MIN_LENGTH:-8}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+      - REFRESH_TOKEN_EXPIRE_DAYS=${REFRESH_TOKEN_EXPIRE_DAYS:-7}
 
       # Rate Limiting
-      - RATE_LIMIT_ENABLED=true
-      - RATE_LIMIT_PER_MINUTE=60
+      - RATE_LIMIT_ENABLED=${RATE_LIMIT_ENABLED:-true}
+      - RATE_LIMIT_PER_MINUTE=${RATE_LIMIT_PER_MINUTE:-60}
 
       # CORS
-      - CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000,http://localhost:8000}
 
     ports:
       - "8000:8000"
@@ -162,31 +162,31 @@ services:
     container_name: saas_celery_worker
     environment:
       # Application
-      - APP_NAME=SaaS Backend Framework
-      - APP_ENV=development
-      - DEBUG=true
-      - SECRET_KEY=dev-secret-key-change-in-production-min-32-characters-long
+      - APP_NAME=${APP_NAME:-SaaS Backend Framework}
+      - APP_ENV=${APP_ENV:-development}
+      - DEBUG=${DEBUG:-true}
+      - SECRET_KEY=${SECRET_KEY}
 
       # Database
-      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/saas_db
-      - DATABASE_POOL_SIZE=20
-      - DATABASE_MAX_OVERFLOW=10
+      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-saas_db}
+      - DATABASE_POOL_SIZE=${DATABASE_POOL_SIZE:-20}
+      - DATABASE_MAX_OVERFLOW=${DATABASE_MAX_OVERFLOW:-10}
 
       # Redis
-      - REDIS_URL=redis://redis:6379/0
-      - REDIS_CACHE_DB=1
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - REDIS_CACHE_DB=${REDIS_CACHE_DB:-1}
 
       # Celery
-      - CELERY_BROKER_URL=redis://redis:6379/2
-      - CELERY_RESULT_BACKEND=redis://redis:6379/3
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://redis:6379/2}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND:-redis://redis:6379/3}
 
       # File Storage
-      - FILE_STORAGE_PROVIDER=s3
-      - MAX_FILE_SIZE_MB=50
-      - AWS_S3_BUCKET=saas-uploads
-      - AWS_ACCESS_KEY_ID=minioadmin
-      - AWS_SECRET_ACCESS_KEY=minioadmin
-      - AWS_REGION=us-east-1
+      - FILE_STORAGE_PROVIDER=${FILE_STORAGE_PROVIDER:-s3}
+      - MAX_FILE_SIZE_MB=${MAX_FILE_SIZE_MB:-50}
+      - AWS_S3_BUCKET=${AWS_S3_BUCKET:-saas-uploads}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-minioadmin}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-minioadmin}
+      - AWS_REGION=${AWS_REGION:-us-east-1}
       - AWS_ENDPOINT_URL=http://minio:9000
 
     volumes:
@@ -211,23 +211,23 @@ services:
     container_name: saas_celery_beat
     environment:
       # Application
-      - APP_NAME=SaaS Backend Framework
-      - APP_ENV=development
-      - DEBUG=true
-      - SECRET_KEY=dev-secret-key-change-in-production-min-32-characters-long
+      - APP_NAME=${APP_NAME:-SaaS Backend Framework}
+      - APP_ENV=${APP_ENV:-development}
+      - DEBUG=${DEBUG:-true}
+      - SECRET_KEY=${SECRET_KEY}
 
       # Database
-      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/saas_db
-      - DATABASE_POOL_SIZE=20
-      - DATABASE_MAX_OVERFLOW=10
+      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-saas_db}
+      - DATABASE_POOL_SIZE=${DATABASE_POOL_SIZE:-20}
+      - DATABASE_MAX_OVERFLOW=${DATABASE_MAX_OVERFLOW:-10}
 
       # Redis
-      - REDIS_URL=redis://redis:6379/0
-      - REDIS_CACHE_DB=1
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - REDIS_CACHE_DB=${REDIS_CACHE_DB:-1}
 
       # Celery
-      - CELERY_BROKER_URL=redis://redis:6379/2
-      - CELERY_RESULT_BACKEND=redis://redis:6379/3
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://redis:6379/2}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND:-redis://redis:6379/3}
 
     volumes:
       - .:/app
@@ -247,8 +247,8 @@ services:
       dockerfile: Dockerfile
     container_name: saas_flower
     environment:
-      - CELERY_BROKER_URL=redis://redis:6379/2
-      - CELERY_RESULT_BACKEND=redis://redis:6379/3
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://redis:6379/2}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND:-redis://redis:6379/3}
     ports:
       - "5555:5555"
     depends_on:
