--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     # Core Framework
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
-    "pydantic>=2.9.0",
+    "pydantic[email]>=2.9.0",
     "pydantic-settings>=2.6.0",
 
     # Database
@@ -19,11 +19,11 @@ dependencies = [
 
     # Authentication & Security
     "python-jose[cryptography]>=3.3.0",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib[argon2]>=1.7.4",
+    "argon2-cffi>=23.1.0",
     "python-multipart>=0.0.12",
     "authlib>=1.3.2",
     "python-keycloak>=4.5.1",
-    "bcrypt>=4.2.0",
     "pyotp>=2.9.0",
     "qrcode[pil]>=7.4.2",
 
@@ -51,6 +51,10 @@ dependencies = [
     "safety>=3.2.8",
     "bandit>=1.7.10",
     "prometheus-fastapi-instrumentator>=7.0.0",
+
+    # Logging
+    "structlog>=25.4.0",
+    "python-json-logger>=3.2.1",
 ]
 
 [project.optional-dependencies]
@@ -65,9 +69,10 @@ dev = [
     "ruff>=0.7.3",
     "mypy>=1.13.0",
     "pre-commit>=4.0.1",
+    "watchfiles>=0.21.0",  # For auto-reload in Docker dev
 ]
 cli = [
-    "typer[all]>=0.9.0",
+    "typer>=0.9.0",
     "rich>=13.7.0",
     "httpx>=0.27.2",
 ]
@@ -76,8 +81,8 @@ cli = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=8.3.3",
     "pytest-asyncio>=0.24.0",
     "pytest-cov>=6.0.0",
@@ -88,6 +93,7 @@ dev-dependencies = [
     "ruff>=0.7.3",
     "mypy>=1.13.0",
     "pre-commit>=4.0.1",
+    "watchfiles>=0.21.0",  # For auto-reload in Docker dev
 ]
 
 [tool.black]
@@ -136,3 +142,6 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
