--- a/.env.example
+++ b/.env.example
@@ -122,3 +122,23 @@ ALLOWED_FILE_TYPES=
 #   - Executables and potentially dangerous files are blocked by default
 #   - Add more MIME types if needed (comma-separated)
 BLOCKED_FILE_TYPES=application/x-executable,application/x-dosexec,application/x-msdos-program
+
+# Stripe / Billing
+STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
+STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
+STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
+STRIPE_API_VERSION=2025-09-30
+
+# Stripe Price IDs (create these in Stripe Dashboard)
+STRIPE_PRICE_STARTER_MONTHLY=price_starter_monthly
+STRIPE_PRICE_STARTER_YEARLY=price_starter_yearly
+STRIPE_PRICE_PRO_MONTHLY=price_pro_monthly
+STRIPE_PRICE_PRO_YEARLY=price_pro_yearly
+STRIPE_PRICE_ENTERPRISE_MONTHLY=price_enterprise_monthly
+STRIPE_PRICE_ENTERPRISE_YEARLY=price_enterprise_yearly
+
+# Billing Configuration
+BILLING_TRIAL_DAYS=14
+BILLING_GRACE_PERIOD_DAYS=3
+BILLING_SEND_RECEIPTS=true
+BILLING_ALLOW_DOWNGRADES=true
