--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,11 @@ dependencies = [
     "uvicorn[standard]>=0.32.0",
     "pydantic[email]>=2.9.0",
     "pydantic-settings>=2.6.0",
-
     # Database
     "sqlalchemy>=2.0.35",
     "alembic>=1.13.3",
     "asyncpg>=0.29.0",
     "psycopg2-binary>=2.9.10",
-
     # Authentication & Security
     "python-jose[cryptography]>=3.3.0",
     "passlib[argon2]>=1.7.4",
@@ -26,38 +24,33 @@ dependencies = [
     "python-keycloak>=4.5.1",
     "pyotp>=2.9.0",
     "qrcode[pil]>=7.4.2",
-
     # Background Tasks
     "celery>=5.4.0",
     "flower>=2.0.1",
     "redis>=5.2.0",
-
     # HTTP & Integrations
     "httpx>=0.27.2",
     "openai>=1.54.0",
     "aiohttp>=3.10.10",
     "boto3>=1.35.0",
     "pillow>=10.4.0",
-
     # Payments
     "stripe>=13.0.0",
-
     # Utilities
     "python-dotenv>=1.0.1",
     "orjson>=3.10.10",
     "python-dateutil>=2.9.0",
     "pytz>=2024.2",
     "user-agents>=2.2.0",
-
     # Security & Monitoring
     "slowapi>=0.1.9",
     "safety>=3.2.8",
     "bandit>=1.7.10",
     "prometheus-fastapi-instrumentator>=7.0.0",
-
     # Logging
     "structlog>=25.4.0",
     "python-json-logger>=3.2.1",
+    "python-magic>=0.4.27",
 ]
 
 [project.optional-dependencies]
